# wmibov

./: CMakeLists.txt  README.md  curl_request.cc  curl_request.h  font_green.xpm  font_red.xpm  font_white.xpm  font_yellow.xpm  main.cc  mask.xbm  quote_fetcher.cc  quote_fetcher.h  wm_window.cc  wm_window.h  wmibov.sample
